# thecomrademajor_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  START.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: __init__.py  bot.py  config.py  gigachat_client.py  main.py
tests/: test_config.py
